# embedlog

./: .gitignore  .vimrc  INSTALL  LICENSE  Makefile.am  Makefile.am.coverage  configure.ac  embedlog-sources.mk  gen-download-page.sh  man2html.sh  pvs-analyze.sh  readme.md  readme.rst  test-compilation-options  test-compilation.sh
examples/: Makefile.am  decode-binary.c  el-encode-number.c  el-file.c  el-flush.c  el-lock.c  el-options.c  el-pbinary.c  el-perror.c  el-pmemory.c  el-print.c  el-utils.h  print-binary.c  print-example.c  print-memory.c  print-options.c  print-simple.c  print-thread-safe.c  print-to-file.c  print-tty.c  print-with-object.c  snprintf.c
include/: Makefile.am  embedlog.h  embedlog.h.in
m4/: gcov.m4
man/: Makefile.am  el_cleanup.3  el_destroy.3  el_flush.3  el_init.3  el_level_set.3  el_new.3  el_oflush.3  el_olevel_set.3  el_ooption.3  el_option.3  el_output_disable.3  el_output_enable.3  el_overview.7  el_perror.3  el_print.3
pkg/: test.c
pkg/deb/: changelog.template  control.template  copyright  create-pkg.sh  libembedlog-dev.install  rules
pkg/rpm/: create-pkg.sh  embedlog.spec.template
pkg/tgz/: create-pkg.sh
src/: Makefile.am  config-priv.h  el-decode-number.c  el-encode-number.c  el-file.c  el-file.h  el-flush.c  el-lock.c  el-options.c  el-options.h  el-pbinary.c  el-perror.c  el-pmemory.c  el-print.c  el-private.h  el-puts.c  el-syslog.c  el-ts.c  el-tty.c  el-tty.h  el-utils.c  el-utils.h  embedlog.c  main.c  options.c  options.h  snprintf.c  valid.h
tst/: Makefile.am  Makefile.am.coverage  el-decode-number.c  el-file.c  el-options.c  el-perror.c  el-pmemory.c  el-print.c  el-puts.c  el-ts.c  el-tty.c  el-utils.c  main.c  mtest.h  test-el-file.c  test-el-options.c  test-el-pbinary.c  test-el-perror.c  test-el-pmemory.c  test-el-print.c  test-group-list.h  test_group_list.h
www/: Makefile.am  conf.py  custom.css  downloads.html  el_overview.7.rst  header.in  index.in  index.rst  post-process.sh  readme.rst
www/in/: el_cleanup.in  el_color.err  el_colors.desc  el_custom_put.desc  el_enable_colors.in  el_enable_file_log.in  el_enable_output.in  el_enable_thread_safe.in  el_finfo.desc  el_flush.in  el_fpath.desc  el_fpath.err  el_frotate_date.desc  el_frotate_number.desc  el_frotate_size.desc  el_fsync_every.desc  el_fsync_level.desc  el_funcinfo.desc  el_init.in  el_level.desc  el_level.err  el_option.in  el_out.desc  el_out.err  el_pbinary.in  el_pmemory.in  el_prefix.desc  el_print.in  el_print_extra_info.in  el_print_level.desc  el_set_custom_put.in  el_set_file_sync.in  el_set_log_level.in  el_set_prefix.in  el_set_timestamp.in  el_set_tty_dev.in  el_thread_safe.desc  el_thread_safe.err  el_ts.desc  el_ts_fract.desc  (+5 more)
www/manuals/: index.rst
www/manuals/base/: el_cleanup.3.rst  el_destroy.3.rst  el_flush.3.rst  el_init.3.rst  el_new.3.rst  index.rst
www/manuals/el_o/: el_ocleanup.3.rst  el_odestroy.3.rst  el_odisable_output.3.rst  el_oenable_colors.3.rst  el_oenable_file_log.3.rst  el_oenable_output.3.rst  el_oenable_thread_safe.3.rst  el_oflush.3.rst  el_oinit.3.rst  el_ooption.3.rst  el_opbinary.3.rst  el_operror.3.rst  el_opmemory.3.rst  el_opmemory_table.3.rst  el_oprint.3.rst  el_oprint_extra_info.3.rst  el_oputb.3.rst  el_oputs.3.rst  el_oset_custom_put.3.rst  el_oset_file_sync.3.rst  el_oset_log_level.3.rst  el_oset_prefix.3.rst  el_oset_timestamp.3.rst  el_oset_tty_dev.3.rst  el_ovprint.3.rst  index.rst
www/manuals/options/: el_disable_output.3.rst  el_enable_colors.3.rst  el_enable_file_log.3.rst  el_enable_output.3.rst  el_enable_thread_safe.3.rst  el_option.3.rst  el_print_extra_info.3.rst  el_set_custom_put.3.rst  el_set_file_sync.3.rst  el_set_log_level.3.rst  el_set_prefix.3.rst  el_set_timestamp.3.rst  el_set_tty_dev.3.rst  index.rst
www/manuals/print/: el_pbinary.3.rst  el_perror.3.rst  el_pmemory.3.rst  el_pmemory_table.3.rst  el_print.3.rst  el_putb.3.rst  el_puts.3.rst  el_vprint.3.rst  index.rst
www/static/: custom.css
