man_MANS = el_cleanup.3 \
		   el_init.3 \
		   el_ocleanup.3 \
		   el_oinit.3 \
		   el_ooption.3 \
		   el_operror.3 \
		   el_opmemory.3 \
		   el_oprint.3 \
		   el_option.3 \
		   el_oputs.3 \
		   el_overview.7 \
		   el_ovprint.3 \
		   el_perror.3 \
		   el_pmemory.3 \
		   el_print.3 \
		   el_puts.3 \
		   el_vprint.3 \
		   el_flush.3 \
		   el_oflush.3

EXTRA_DIST = $(man_MANS)
